--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "prepublish": "npm run build",
     "test": "npm run build && mocha -R spec --colors lib/test --timeout 30000"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@reactivex/rxjs": "^5.0.0-beta.12"
+  },
   "devDependencies": {
     "@types/mocha": "^2.2.32",
     "@types/should": "^8.1.30",
