--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "test": "npm run build && mocha -R spec --colors lib/test --timeout 30000"
   },
   "dependencies": {
-    "@reactivex/rxjs": "^5.0.0-beta.12"
+    "rxjs": "^5.3.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.32",
-    "@types/node": "^6.0.41",
+    "@types/node": "^6.0.68",
     "@types/should": "^8.1.30",
     "mocha": "^3.0.2",
     "should": "^11.1.0",
     "source-map-support": "^0.4.2",
-    "typescript": "^2.0.3"
+    "typescript": "^2.2.2"
   },
   "engines": {
-    "node": ">=4.2.0"
+    "node": ">=6.10.0"
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
