remove the generic from `MetricName`.
not convinced this in the way to go, tho.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,32 +2,14 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "isolatedModules": false,
-    "jsx": "react",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "strict": true,
+    "sourceMap": true,
     "noImplicitAny": true,
-    "noImplicitUseStrict": false,
     "noImplicitReturns": true,
-    "allowUnreachableCode": false,
-    "removeComments": true,
-    "noLib": false,
     "rootDir": "src/",
     "outDir": "lib/",
     "declaration": true,
     "declarationDir": "lib/",
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "strictNullChecks": true
+    "skipLibCheck": true
   },
-  "filesGlob": [
-    "src/**/*.ts"
-  ],
-  "compileOnSave": true,
-  "buildOnSave": false,
-  "atom": {
-    "rewriteTsconfig": false
-  }
 }
