--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crow-metrics",
-  "version": "3.2.3",
+  "version": "4.0.0",
   "description": "small metrics collector for node.js servers",
   "keywords": [
     "metrics",
@@ -17,23 +17,19 @@
     "build": "tsc",
     "clean": "rm -rf lib",
     "distclean": "npm run clean && rm -rf node_modules npm-debug.log",
-    "prepublish": "npm run build",
     "test": "npm run build && mocha -R spec --colors lib/test --timeout 30000"
   },
-  "dependencies": {
-    "rxjs": "^5.5.6"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/mocha": "^2.2.32",
-    "@types/node": "^6.0.68",
-    "@types/should": "^8.1.30",
-    "mocha": "^3.5.3",
-    "should": "^11.2.1",
-    "source-map-support": "^0.4.18",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^8.9.5",
+    "mocha": "^5.0.4",
+    "should": "^13.2.1",
+    "source-map-support": "^0.5.3",
     "typescript": "^2.7.2"
   },
   "engines": {
-    "node": ">=6.10.0"
+    "node": ">=8.5.0"
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
