bring back ringbuffer.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "tsc",
     "clean": "rm -rf lib",
     "distclean": "npm run clean && rm -rf node_modules npm-debug.log",
+    "prepare": "tsc",
     "test": "npm run build && mocha -R spec --colors lib/test --timeout 30000"
   },
   "dependencies": {},
